@startuml class_diagram
!theme plain

package Domain {
  enum Role {
    ADMIN
    SUPERVISOR
    OPERATOR
  }
  
  enum Severity {
    LOW
    MEDIUM
    HIGH
    CRITICAL
  }
  
  enum IncidentStatus {
    OPEN
    ASSIGNED
    IN_PROGRESS
    RESOLVED
    CLOSED
  }
  
  enum TaskStatus {
    OPEN
    IN_PROGRESS
    DONE
  }
  
  class User {
    - id: str
    - name: str
    - email: str
    - password: str
    - role: Role
    + validate()
  }
  
  class Incident {
    - id: str
    - title: str
    - description: str
    - severity: Severity
    - status: IncidentStatus
    - created_by: str
    - assigned_to: str
    - created_at: datetime
    - _state: IncidentState
    + assign(assignee_id)
    + start_progress()
    + resolve()
    + close()
  }
  
  class Task {
    - id: str
    - incident_id: str
    - title: str
    - description: str
    - status: TaskStatus
    - assigned_to: str
    - created_at: datetime
    + validate()
  }
  
  class Notification {
    - id: str
    - recipient: str
    - channel: NotificationChannel
    - message: str
    - event_type: EventType
    - status: NotificationStatus
    - created_at: datetime
  }
  
  abstract IncidentState {
    + assign()
    + start_progress()
    + resolve()
    + close()
  }
  
  class OpenState {
    + assign()
  }
  
  class AssignedState {
    + start_progress()
  }
  
  class InProgressState {
    + resolve()
  }
  
  class ResolvedState {
    + close()
  }
  
  IncidentState <|-- OpenState
  IncidentState <|-- AssignedState
  IncidentState <|-- InProgressState
  IncidentState <|-- ResolvedState
  
  Incident --> IncidentState
}

package Application {
  class AuthUseCases {
    - user_repo: UserRepository
    + register_user(data)
    + login(data)
  }
  
  class IncidentUseCases {
    - incident_repo: IncidentRepository
    - user_repo: UserRepository
    - event_bus: EventBus
    + create_incident(data, creator_id)
    + get_all_incidents(user)
    + assign_incident(id, assignee)
    + resolve_incident(id)
  }
  
  class TaskUseCases {
    - task_repo: TaskRepository
    - event_bus: EventBus
    + create_task(data)
    + get_tasks(user)
    + change_status(id, status)
  }
  
  class NotificationUseCases {
    - notification_repo: NotificationRepository
    + get_notifications(user)
  }
  
  class UserDTO {
    - id: str
    - username: str
    - email: str
    - role: Role
  }
  
  class IncidentDTO {
    - id: str
    - title: str
    - description: str
    - severity: Severity
    - status: IncidentStatus
    - created_at: datetime
  }
  
  class TaskDTO {
    - id: str
    - incident_id: str
    - title: str
    - status: TaskStatus
  }
  
  class NotificationDTO {
    - id: str
    - message: str
    - event_type: str
    - status: str
  }
}

package Infrastructure {
  abstract UserRepository {
    + save(user)
    + find_by_id(id)
    + find_by_email(email)
    + find_all()
  }
  
  abstract IncidentRepository {
    + save(incident)
    + find_by_id(id)
    + find_by_creator(user_id)
    + find_by_assignee(user_id)
    + find_by_status(status)
  }
  
  abstract TaskRepository {
    + save(task)
    + find_by_id(id)
    + find_by_incident(incident_id)
    + find_by_assignee(user_id)
  }
  
  abstract NotificationRepository {
    + save(notification)
    + find_by_recipient(user_id)
    + find_all()
  }
  
  class SQLAlchemyUserRepository {
    - db: Session
    + save(user)
    + find_by_id(id)
  }
  
  class SQLAlchemyIncidentRepository {
    - db: Session
    + save(incident)
    + find_by_id(id)
  }
  
  class SQLAlchemyTaskRepository {
    - db: Session
    + save(task)
    + find_by_id(id)
  }
  
  class SQLAlchemyNotificationRepository {
    - db: Session
    + save(notification)
    + find_by_recipient(user_id)
  }
  
  UserRepository <|.. SQLAlchemyUserRepository
  IncidentRepository <|.. SQLAlchemyIncidentRepository
  TaskRepository <|.. SQLAlchemyTaskRepository
  NotificationRepository <|.. SQLAlchemyNotificationRepository
  
  abstract Command {
    + execute()
  }
  
  class SendEmailCommand {
    - notification: Notification
    + execute()
  }
  
  class SendInAppCommand {
    - notification: Notification
    + execute()
  }
  
  Command <|-- SendEmailCommand
  Command <|-- SendInAppCommand
  
  abstract NotificationTemplate {
    + build_message()
  }
  
  class EmailNotificationTemplate {
    + build_message()
  }
  
  class InAppNotificationTemplate {
    + build_message()
  }
  
  NotificationTemplate <|-- EmailNotificationTemplate
  NotificationTemplate <|-- InAppNotificationTemplate
  
  abstract Observer {
    + update(event_type, data)
  }
  
  class NotificationObserver {
    - command_factory
    + update(event_type, data)
  }
  
  class LogObserver {
    + update(event_type, data)
  }
  
  Observer <|-- NotificationObserver
  Observer <|-- LogObserver
  
  class EventBus {
    - observers: List[Observer]
    + subscribe(observer)
    + publish(event_type, data)
  }
  
  EventBus --> Observer
  NotificationObserver --> Command
}

package API {
  class AuthController {
    + register()
    + login()
    + get_current_user()
  }
  
  class IncidentController {
    + create_incident()
    + list_incidents()
    + get_incident()
    + assign_incident()
    + change_status()
  }
  
  class TaskController {
    + create_task()
    + list_tasks()
    + change_status()
  }
  
  class NotificationController {
    + get_notifications()
  }
}

IncidentUseCases --> IncidentRepository : usa
IncidentUseCases --> EventBus : publica
TaskUseCases --> TaskRepository : usa
TaskUseCases --> EventBus : publica
AuthUseCases --> UserRepository : usa
NotificationUseCases --> NotificationRepository : usa

AuthController --> AuthUseCases
IncidentController --> IncidentUseCases
TaskController --> TaskUseCases
NotificationController --> NotificationUseCases

@enduml
